--- a/src/pages/home/App.scss
+++ b/src/pages/home/App.scss
@@ -1,9 +1,13 @@
 .App {
+	//text-align: center;
+}
+
+.App-logo-container {
 	text-align: center;
 }
 
 .App-logo {
-	height: 40vmin;
+	height: 50px;
 	pointer-events: none;
 }
 
@@ -14,7 +18,7 @@
 }
 
 .App-header {
-	background-color: #282c34;
+	background-color: #ddd;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -26,6 +30,10 @@
 
 .App-link {
 	color: #61dafb;
+}
+
+.card-width {
+	width: 400px;
 }
 
 @keyframes App-logo-spin {
